added initial content for resume site

--- a/resume_page/index.html
+++ b/resume_page/index.html
@@ -13,10 +13,23 @@
       h1 {
         font-style: italic;
         font-weight: bolder;
+        text-align: center;
+        font-family: sans-serif;
       }
     </style>
   </head>
   <body>
     <h1 style="color: blue">Grumpy Cat</h1>
+    <img style="width: 100%" src="cat.jpeg" />
+    <h3>Content</h3>
+    <ul>
+      Work History
+      <li>Facebook</li>
+      <li>Google</li>
+      <li>Amazon</li>
+    </ul>
+    <a href="https://www.linkedin.com/">LinkedIn</a>
+    <a href="https://twitter.com/?lang=en">Twitter</a>
+    <a href="https://my.generalassemb.ly/">General Assembly</a>
   </body>
 </html>
