--- a/resume_page/index.html
+++ b/resume_page/index.html
@@ -14,7 +14,7 @@
         font-style: italic;
         font-weight: bolder;
         text-align: center;
-        font-family: sans-serif;
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
       }
     </style>
   </head>
