added project.html page and content - finished resume

--- a/resume_page/projects.html
+++ b/resume_page/projects.html
@@ -16,23 +16,16 @@
         text-align: center;
         font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
       }
+      table,
+      td,
+      th {
+        border: 2px solid black;
+        border-collapse: collapse;
+        padding: 8px;
+      }
     </style>
   </head>
   <body>
-    <h1 style="color: blue">Grumpy Cat</h1>
-    <img style="width: 100%" src="cat.jpeg" />
-    <h3>Content</h3>
-    <ul>
-      Work History
-      <li>Facebook</li>
-      <li>Google</li>
-      <li>Amazon</li>
-    </ul>
-    <!-- 
-    <a href="https://www.linkedin.com/">LinkedIn</a>
-    <a href="https://twitter.com/?lang=en">Twitter</a>
-    <a href="https://my.generalassemb.ly/">General Assembly</a> 
-    -->
     <nav>
       <a
         href="/Users/bijaykadariya/Downloads/Bootcamp/GA Class/Unit 1/Week1/Deliverable Assignment/git_github_assignment/resume_page/index.html"
@@ -44,5 +37,32 @@
       >
       <a href="https://my.generalassemb.ly/">General Assembly</a>
     </nav>
+    <h2>Projects</h2>
+    <table>
+      <tr>
+        <th>##</th>
+        <th>Title</th>
+        <th>Description</th>
+      </tr>
+
+      <tr>
+        <td>1</td>
+        <td>SunBurstChart</td>
+        <td>Grumpy Cat has worked on Visualizing data in sunburst chart</td>
+      </tr>
+      <tr>
+        <td>2</td>
+        <td>SharePoint</td>
+        <td>
+          Grumpy cat has recently worked on creating webpage through sharepoint
+          online
+        </td>
+      </tr>
+      <tr>
+        <td>3</td>
+        <td>projectCar</td>
+        <td>Grumpy cat has recently worked on Ceramic Coating the Vehicle.</td>
+      </tr>
+    </table>
   </body>
 </html>
