--- a/resume_page/index.html
+++ b/resume_page/index.html
@@ -24,9 +24,9 @@
     <h3>Content</h3>
     <ul>
       Work History
-      <li>Facebook</li>
-      <li>Google</li>
-      <li>Amazon</li>
+      <li>Unfacebook</li>
+      <li>Googley</li>
+      <li>notAmazon</li>
     </ul>
     <!-- 
     <a href="https://www.linkedin.com/">LinkedIn</a>
